darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • darwin-code-logs.log
    • darwin-code-connectivity-diagnostics.txt

› 1. Yes  Share the current Darwin-Code session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
