darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • darwin-code-logs.log
    • darwin-code-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

› 1. Yes  Share the current Darwin-Code session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
