darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

╭───────────────────────────────────────╮
│ >_ Darwin Code (v0.0.0)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯


› Explain this codebase

  gpt-5.3-darwin-code default · /tmp/project
