darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭───────────────────────────────────────╮                                       "
"│ >_ Darwin Code (v0.0.0)         │                                       "
"│                                       │                                       "
"│ model:     loading   /model to change │                                       "
"│ directory: /tmp/project               │                                       "
"╰───────────────────────────────────────╯                                       "
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Explain this codebase                                                         "
"                                                                                "
"  gpt-5.3-darwin-code default · /tmp/project                                    "
