darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__memories_enable_prompt.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Enable memories?
  Memories are currently disabled in your config.

› 1. Yes, enable  Save the setting now. You will need a new session to use it.
  2. Not now      Keep memories disabled.

  Learn more: https://docs.darwin.local/darwin-code/memories
  Press enter to confirm or esc to go back
