darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model
  Add models under config.toml provider models, then choose one here.

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
