darwin-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Reasoning Level for gpt-5.1-darwin-code-max

  1. Low               Fast responses with lighter reasoning
  2. Medium (default)  Balances speed and reasoning depth for everyday tasks
› 3. High (current)    Greater reasoning depth for complex problems
  4. Extra high        Extra high reasoning depth for complex problems

  Press enter to confirm or esc to go back
